[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/0x72_16x16RobotTileset.v1.png" type="Texture" id=1]
[ext_resource path="res://objects/inanimate/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Button" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ControlTip" type="Label" parent="."]
visible = false
margin_left = -151.433
margin_top = -39.595
margin_right = 151.567
margin_bottom = -8.59503
text = "Button
Z: Activate"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Button_body_exited"]
